--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Header Template</title>
+        <title>Header Template (Vanilla)</title>
         <link rel="stylesheet" type="text/css" href="./styles.css">
     </head>
   <body>
